# rule4

./: BLOB_EXTENSIONS.md  CLAUDE.md  README.md  pyproject.toml  setup.cfg
column_role/: README.md  catalog_diff.py  catalog_meta.py  catalog_seed.json  catalog_seed_duckdb.json  catalog_seed_joins_sqlserver.json  catalog_seed_postgresql.json  catalog_seed_postgresql_ext.json  catalog_seed_sqlserver_ext.json  catalog_seed_sqlserver_facets.json  catalog_seed_sqlserver_objects.json  column_collection.py  demo_backlog.py  demo_catalog_essences.py  demo_catalog_source.py  demo_column_collection.py  demo_drop_recreate.py  demo_essence_ttst.py  demo_except_diff.py  demo_migration.py  demo_migration_capture.py  demo_migration_recreate.py  demo_organism.py  demo_pruned_capture.py  demo_registry.py  demo_sampling.py  demo_schema_evolution.py  demo_tailing.py  demo_ttst_roundtrip.py  demo_type_reference.py  demo_user_column.py  extraction.py  lakeio.py  migration.py  organism.py  registry.py  sampling.py  schema_evolution.py  tailing.py  ttst.py  (+1 more)
column_role/docs/: Catalog As Data.md  Yoke Essence Fixpoint.md  metamodel.md
column_role/sql/: duckdb.sql  postgresql.sql  sqlite.sql  sqlserver.sql
doc/: Asset Management as Data.md  Temporal Source Taxonomy.md  logs_all_the_way_down.md  provenance_capture.md  scalar_json_pattern.md
docs/: text-to-diagram-pipeline.md
examples/: cdc_history_replica.py  ct_history_replica.py  ct_replica.py
sql/: extended_properties.sql
sql/ducklake/: README.md
sql/schema/: backlog.sql  base.sql  fts.sql  http_request.sql  main.sql
sql/socrata/: README.md  demo_download_socrata_tsv.sql  fs_upsert_socrata_resource_all_views.sql  fs_upsert_socrata_resource_view_column.sql  initialize_seed_data.sql  main.sql  make_socrata.sql  mksoc.bat  mksoc.sh  params.sql  resource.sql  socrata_domains.json  templates.sql  test_all_views.sql  test_view.sql  update_socrata_domain_list.sql  upsert_socrata_resources.sql
sql/templates/: backlog.sql  codegen.sql  socrata.sql  templating.sql
src/rule4/: catalog.py  cli.py  ducklake_catalog.py  ducklake_writer.py  util.py  (+3 more)
(+34 files in other folders)
