[project]
name = "rule4"
version = "0.1.0"
description = "Universal schema registry — Codd's Rule 4 as code"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "duckdb>=1.5.4",
    "psycopg2-binary>=2.9.11",
    "duckdb-engine>=0.17.0",
    "pyyaml>=6.0",
    "pytz>=2026.1.post1",
    "pyarrow>=23.0.1",
    "pyodbc>=5.3.0",
    "textual>=3.0",
    "textual-plotext>=0.2",
    "docopt>=0.6.2",
    "flask>=3.1.3",
    "requests>=2.32.5",
    "ducklake-oob-writer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
socrata-browser = "rule4.socrata_browser:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rule4"]

[tool.uv.sources]
ducklake-oob-writer = { path = "../ducklake_oob_writer", editable = true }
